# FonDeDeNaJa

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust  Makefile  README.md  README_DOCKER.md  README_RUST.md  README_WEB.md  answer_key.csv  app.py  auth_online.py  bubble_grader_frontend.py  build.sh  checkans&key.py  deploy-app  deploy.sh  developers.csv  docker-compose.rust.yml  docker-compose.yml  example.py  generate_cookie.py  hello.py  lib.py  main.py  packages.txt  refresh_cookie.py  requirements.txt  setup.py  setup.sh  tempCodeRunnerFile.sh  test-docker.sh  test.py  test2.py  test_auth_local.py  test_config.py  test_login.py  test_secret.py  (+4 more)
.github/workflows/: deploy.yml
.streamlit/: main.py  secret.toml  test_auth.py  upload.py
OMRChecker_samples/test1/: template.json
OMRChecker_src/: entry.py  logger.py  template.py
OMRChecker_src/defaults/: template.py
OMRChecker_src/processors/: builtins.py
OMRChecker_src/schemas/: __init__.py  config_schema.py  template_schema.py
OMRChecker_src/tests/: test_all_samples.py  utils.py
OMRChecker_src/utils/: file.py  validations.py
app/: appconfig.py  bubble_grader_frontend.py  config.py  docker-compose.yml  env_check.py  intialize.py  is_default.py  liberty.py  logsetup.py  main.py  test.py  test_)main.py
app/.streamlit/: config.toml  secrets.toml
app/pages/: About_Me.py  Entry.py  Grader.py  Manage_Permission.py  OMRChecker_main.py  Upload.py
app/resources/: lib.py  user.csv
app/src/: lib.py
data/: settings.yaml  user.csv
docs/: prune_images.md
pages/: 2_About_Me.py  3_Grader.py
resources/: answer_key.csv  config.toml  user.csv
rust-src/: alignment.rs  bubble_detection.rs  config.rs  evaluation.rs  image_processing.rs  lib.rs  main.rs  template.rs  web_main.rs
samples/test1/: config.json  template.json
scripts/: prune_images.sh
src/: __init__.py  auth.py  constants.py  core.py  evaluation.py  lib.py
src/defaults/: __init__.py  config.py
test_outputs/: results.csv  results.json
(+18 files in other folders)
